non_executable_reasons_record/185.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
### コンパイル
javac HelloWorld.java

### 実行
java HelloWorld
------------------

[0;36m  File [0;32m"<ipython-input-1-f23cd94b924b>"[0;36m, line [0;32m5[0m
[0;31m    javac HelloWorld.java[0m
[0m                   ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-f23cd94b924b>, line 5)

Executability                            : False
